# github-win-msbuild-action

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: push.yml
src/: main.cpp
